<resources>
    <string name="app_name">日本キスコ株式会社</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- Strings related to login -->
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="content_description_title_image">KISSCO logo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">ログイン</string>
    <string name="action_company_info">会社情報</string>
    <string name="action_company_map">地図</string>
    <string name="action_company_service">サービス</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
