<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMain"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/screen_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/content_description_app_loading_image"
        android:src="@drawable/kissco_main_logo"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/screen_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible"
        >
        <ImageView
            android:src="@drawable/kissco_main_logo"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:contentDescription="@string/content_description_title_image"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/btn_email_login"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/action_sign_in"
                    android:background="@color/colorLoginBtn"
                    android:textStyle="bold"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:stretchColumns="1, 2, 3">

                    <TableRow>
                        <Button
                            android:id="@+id/btn_company_info"
                            style="?android:textAppearanceSmall"
                            android:layout_height="80dp"
                            android:layout_column="1"
                            android:text="@string/action_company_info"
                            android:textStyle="bold"/>
                        <Button
                            android:id="@+id/btn_company_map"
                            style="?android:textAppearanceSmall"
                            android:layout_height="80dp"
                            android:layout_column="2"
                            android:text="@string/action_company_map"
                            android:textStyle="bold"/>
                        <Button
                            android:id="@+id/btn_company_service"
                            style="?android:textAppearanceSmall"
                            android:layout_height="80dp"
                            android:layout_column="3"
                            android:text="@string/action_company_service"
                            android:textStyle="bold"/>
                    </TableRow>
                </TableLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
